--- a/public/landing/assets/css/style.css
+++ b/public/landing/assets/css/style.css
@@ -3098,7 +3098,7 @@ ul {
 
 .banner-inner .title {
     font-weight: 900;
-    font-size: 70px !important;
+    font-size: 70px;
 }
 
 .banner-inner .content {
