--- a/public/landing/assets/css/responsive.css
+++ b/public/landing/assets/css/responsive.css
@@ -787,7 +787,7 @@
     }
 
     .toggle-btn {
-        top: 18px;
+        top: 0;
     }
 
     .navbar-area .nav-container .navbar-collapse.sopen {
